2024-10-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3788.c:
	  Disable a test that assuems SDCC implementation-defined behaviour for host.
	* src/z80/peeph.def:
	  z80 peephole optimizer rule improvements.
	* src/z80/gen.c:
	  Improve use of information from generalized constant propagation in z80 subtraction code generation.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix some mentions of Windows in manual.

2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/regression/tests/caseranges.c,
	  support/valdiag/tests/switch.c:
	  Add C2y case range expressions [feature-requests:#947] based on [patches:#313], adapted to match n3370.

2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Add C2y mode in preparation for the first C2y features.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Small improvment in stm8 struct/union parameter passing.

2024-10-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/z80n/mul.s,
	  device/lib/z80n/mulchar.s:
	  Z80N hardware multiplication for _mulint, patch #481 by Janko Stamenović.
	* src/SDCCcse.c,
	  support/regression/tests/bug-3788.c:
	  Fix bug #3788.

2024-10-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3788.c:
	  Regression test for bug #3788 (disabled until bug is fixed).

2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3789.

2024-10-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Generalize a byte-assembly | optimization to make better use of 16-bit stores to stack.

2024-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/z80/gen.c: